# gdal-unet

./: .gitignore  README.md  STATUS.md  color.txt  evaluate.py  export_weights.py  infer.py  predict_gdal.py  profile_layers.py  pyproject.toml  run_predict.slurm  visualize.py
.github/workflows/: build.yml  conda.yml
conda-recipe/: README.md  build.sh  meta.yaml  recipe.yaml
cpp/: CMakeLists.txt
cpp/predict/: predict_cpp.py  run_predict.slurm
cpp/src/: args.hpp  common.hpp  conv_dnnl.cpp  gdal_conv2d.cpp  gdal_io.hpp  gdal_unet_conv.cpp  gdalnn_conv.cpp  ops_stream.cpp  streaming.hpp
cpp/tests/: test_modes.sh
export/: pyproject.toml
export/gdal_unet/: __init__.py  cli.py  sh_emit.py
export/gdal_unet/archs/: resnet.py
export/gdal_unet_export/: __init__.py  cli.py  sh_emit.py
export/gdal_unet_export/archs/: __init__.py  resnet.py
gdal_unet/: __init__.py  cli.py  conv_runner.py  ops.py  predict.py
gdal_unet/backbones/: __init__.py  efficientnet.py  mobilenetv2.py  mobilenetv3.py  resnet.py  resnet18.py
gdal_unet/decoders/: unet.py
reference/: README.md  build_vrt.py  predict_gdal.py
samples/: 1717_image.tif  1717_mask.tif  2056_image.tif  2056_mask.tif  2762_image.tif  2762_mask.tif  6212_image.tif  6212_mask.tif  8180_image.tif  8180_mask.tif
scripts/: argmax_class.py  build_intermediate_viewer.sh  build_layers_manifest.py  compare.py  download_naip.py  env.sh  render_intermediate.py  run_demo.sh  run_pytorch.py  tile_intermediate.sh
tests/: test_backbones.py  test_mobilenetv3.py
tools/: check_alignment.py
vrt/: build_vrt.py  run_vrt.slurm  verify.py
web/: README.md  app.js  index.html  map.js  style.css  unet-minimap.js
