[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdal-unet"
version = "0.1.0"
description = "Run a U-Net forward pass through GDAL CLI primitives."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Isaac Corley" }]
keywords = ["gdal", "unet", "segmentation", "remote-sensing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy",
    "rasterio",
]

[project.scripts]
gdal-unet = "gdal_unet.cli:main"

[project.urls]
Homepage = "https://github.com/isaaccorley/gdal-unet"
Repository = "https://github.com/isaaccorley/gdal-unet"

[tool.setuptools.packages.find]
include = ["gdal_unet*"]
